M20-51: fix first flicker of the reward box

--- a/app/scss/rewards.scss
+++ b/app/scss/rewards.scss
@@ -37,6 +37,7 @@
 }
 
 .ghostery-rewards-component {
+  opacity: 1 !important;
 	* {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -415,8 +416,23 @@
 	.rewards-notification-container {
 		position: absolute;
 		top: 0;
+    right: 0;
 		width: 100%;
 		height: 100%;
+    max-height: 600px;
+    max-width: 300px;
+    animation: fadein 0.5s;
+    -webkit-animation: fadein 0.5s;
+
+    @keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+    }
+    @-webkit-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+    }
+
 
     .rewards-notification-optout-image-wrapper {
       height: 80%;
